# simple_http_1_0_server

./: .gitignore  CMakeLists.txt  README.md  RequestLine.cpp  RequestLine.h  StatusCode.h  main.cpp
discoverer/: FileDiscoverer.cpp  FileDiscoverer.h
handler/full/: FullRequestHandler.cpp  FullRequestHandler.h
handler/simple/: SimpleRequestHandler.cpp  SimpleRequestHandler.h
request/: FullRequest.h
request/headers/: RequestHeaders.h  RequestHeadersValidator.cpp  RequestHeadersValidator.h
request/line/: RequestLine.cpp  RequestLine.h  RequestLineValidator.cpp  RequestLineValidator.h
response/: FullResponse.cpp  FullResponse.h  FullResponseStrategy.cpp  FullResponseStrategy.h  ResponseStrategy.h  SimpleResponseStrategy.cpp  SimpleResponseStrategy.h  StatusCode.h
